# OPGL

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  Main.cpp  Mesh.cpp  Mesh.h  Model.cpp  OPGL.sln  OPGL.vcxproj  OPGL.vcxproj.filters  README.md  VBO.h  default.frag  default.geom  default.vert  glad.c  imageProcessing.cpp  imageProcessing.h  shaderClass.cpp  shaderClass.h  stb_image_write.cpp  textures.txt
Libraries/include/glad/: glad.c
Libraries/lib/: glfw3.lib
YoutubeOpenG/: CMakeLists.txt  Camera.cpp  Camera.h  EBO.cpp  EBO.h  Main.cpp  Main2.cpp  Mesh.cpp  Mesh.h  Texture.cpp  VBO.h  default.frag  default.geom  default.vert  imageProcessing.h  normal_mapping.fs  normal_mapping.vs  outlining.frag  outlining.vert  shaderClass.cpp  shaderClass.h  vert.txt
YoutubeOpenG/Libraries/include/glad/: glad.h
